--- a/app/src/main/res/layout/activity_add_medicine.xml
+++ b/app/src/main/res/layout/activity_add_medicine.xml
@@ -43,6 +43,7 @@
         android:hint="@string/med_name_edit_hint"
         android:textAlignment="center"
         android:textColorHint="@color/gray"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:layout_marginHorizontal="50dp"
         android:inputType="text"
@@ -73,6 +74,7 @@
         android:hint="@string/count_edit_hint"
         android:textAlignment="center"
         android:textColorHint="@color/gray"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:layout_marginHorizontal="50dp"
         android:inputType="number"
@@ -93,23 +95,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/count_edit"
-        app:layout_constraintBottom_toTopOf="@id/exp_edit"
+        app:layout_constraintBottom_toTopOf="@id/exp_button"
     />
 
-    <EditText
-        android:id="@+id/exp_edit"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/exp_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/exp_edit_hint"
-        android:textAlignment="center"
-        android:textColorHint="@color/gray"
-        android:textSize="20sp"
-        android:layout_marginHorizontal="50dp"
-        android:inputType="date"
+        android:text="@string/exp_edit_hint"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/exp_date"
         app:layout_constraintBottom_toTopOf="@id/med_img_text"
+        android:onClick="showCalendar"
     />
 
     <TextView
@@ -122,7 +120,7 @@
         android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/exp_edit"
+        app:layout_constraintTop_toBottomOf="@id/exp_button"
         app:layout_constraintBottom_toTopOf="@id/med_img"
     />
 
@@ -157,6 +155,35 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/add_image_button"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="addMed"
     />
+
+
+
+    <ImageView
+        android:id="@+id/calendar_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#95000000"
+        android:visibility="invisible"
+    />
+
+    <CalendarView
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/white"
+        android:visibility="invisible"
+
+    />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
