--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#2f333d" android:endColor="#252b3d" android:angle="90"/>
+    <gradient android:startColor="#222B38" android:endColor="#2C3036" android:angle="270"/>
 </shape>
