--- a/app/src/main/res/layout/activity_add_medicine.xml
+++ b/app/src/main/res/layout/activity_add_medicine.xml
@@ -136,6 +136,7 @@
             app:layout_constraintRight_toLeftOf="@id/unit_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:maxLength="4"
             />
 
         <Button
