--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".ScheduleActivity"
     android:background="@drawable/main_background"
     >
 
@@ -26,18 +26,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageButton
+                android:id="@+id/back_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/back_button"
+                android:layout_gravity="center_vertical"
+                android:onClick="getBack"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/add_med_title"
+                />
+
             <TextView
                 android:id="@+id/add_med_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/jost"
-                android:text="@string/app_name"
+                android:text="@string/schedule_button"
                 android:textAlignment="center"
                 android:textColor="@color/header_text"
                 android:textSize="40sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/back_button"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
@@ -46,81 +59,61 @@
 
     </androidx.cardview.widget.CardView>
 
-    <!--TODO: Change widget id below and think about functionality-->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/bulbulator"
+    <EditText
+        android:id="@+id/sch_name"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/sch_name_hint"
+        android:textAlignment="center"
+        android:textColorHint="@color/gray"
+        android:textColor="@color/white"
+        android:textSize="22sp"
         android:layout_marginHorizontal="50dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toTopOf="@id/add_med_button"
+        android:inputType="text"
+        android:elevation="5dp"
+        android:background="@drawable/edit_background"
+        android:fontFamily="@font/jost"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:cardCornerRadius="20dp"
-        app:cardBackgroundColor="@color/light_gray"
-        android:elevation="5dp"
-    >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bulbulator"
-            android:fontFamily="@font/jost"
-            android:textSize="50sp"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:elevation="5dp"
-            android:background="@color/light_gray"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toTopOf="@id/it_button"
         />
 
-    </androidx.cardview.widget.CardView>
-
     <Button
-        android:id="@+id/add_med_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/it_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_med_title"
-        android:textSize="30sp"
+        android:layout_marginHorizontal="50dp"
+        android:text="@string/iteration_button_hint"
         android:stateListAnimator="@null"
+        android:backgroundTint="@color/blue_gary"
+        android:textColor="@color/header_text"
+        android:textSize="22sp"
         android:fontFamily="@font/jost"
+        android:onClick="dialog"
         android:elevation="5dp"
-        android:textColor="@color/button_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bulbulator"
-        app:layout_constraintBottom_toTopOf="@id/schedule_button"
-    />
+        app:layout_constraintTop_toBottomOf="@id/sch_name"
+        app:layout_constraintBottom_toTopOf="@id/set_button"
+        />
 
     <Button
-        android:id="@+id/schedule_button"
-        android:layout_width="wrap_content"
+        android:id="@+id/set_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/schedule_button"
-        android:textSize="30sp"
+        android:layout_marginHorizontal="50dp"
+        android:text="@string/set_reminder_button"
         android:stateListAnimator="@null"
+        android:backgroundTint="@color/blue_gary"
+        android:textColor="@color/header_text"
+        android:textSize="22sp"
         android:fontFamily="@font/jost"
+        android:onClick="setReminder"
         android:elevation="5dp"
-        android:textColor="@color/button_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_med_button"
-        app:layout_constraintBottom_toTopOf="@id/list_button"
-    />
-
-    <Button
-        android:id="@+id/list_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/list_button"
-        android:textSize="30sp"
-        android:stateListAnimator="@null"
-        android:fontFamily="@font/jost"
-        android:elevation="5dp"
-        android:textColor="@color/button_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/schedule_button"
+        app:layout_constraintTop_toBottomOf="@id/it_button"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
